--- a/settings.json
+++ b/settings.json
@@ -15,6 +15,13 @@
       3,
       4
     ],
+    "community_order": [
+      0,
+      4,
+      1,
+      2,
+      3
+    ],
     "hyperparam": [
       5,
       0.9
@@ -32,6 +39,10 @@
       1,
       2,
       3
+    ],
+    "community_order": [
+      1,
+      0
     ],
     "hyperparam": [
       2,
@@ -61,6 +72,17 @@
       7,
       5
     ],
+    "community_order": [
+      5,
+      4,
+      1,
+      6,
+      3,
+      8,
+      2,
+      0,
+      7
+    ],
     "hyperparam": [
       9,
       0.8
@@ -82,16 +104,20 @@
     ],
     "label_order": [
       9,
-      7,
+      0,
+      3,
       6,
-      8,
-      10,
       4,
-      2,
       5,
       1,
-      0,
-      3
+      2,
+      10,
+      7,
+      8
+    ],
+    "community_order": [
+      1,
+      0
     ],
     "hyperparam": [
       11,
