--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-numpy==1.23.1
-networkx==2.8
-matplotlib==3.4.3
-seaborn==0.11.2
-pandas==1.3.3
-plotly==5.3.1
-scipy==1.8.1
-umap-learn==0.5.4
+matplotlib==3.10.1
+networkx==3.3
+numpy==2.2.5
+pacmap==0.7.6
+pandas==2.2.3
+plotly==5.24.1
+scikit_learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+trimap==1.1.4
+umap_learn==0.5.6
